why tf doesnt this stuff just send in one go

--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -682,7 +682,7 @@ ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/table
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Carpet
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Materials/Brick
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/FenianShotgun
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3351,7 +3351,7 @@ StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Le
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,
-StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,PostProcessVolume.Lens.Lens
+StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,RectLight.TransformCommon.Transform,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
