--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -141,7 +141,7 @@ Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.Stati
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 Object="\"Object\" \"Object.Texture.SourceColorSettings\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object\" "
 None=======
 None=======
 None=======
@@ -182,14 +182,14 @@ MaterialInterface="\"Object\" "
 Texture2D="\"Object\" \"Object.Texture.SourceColorSettings\" "
 Texture="\"Object\" \"Object.Texture.SourceColorSettings\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
 MaterialExpressionConstant="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
 MaterialExpressionParameter="\"Object\" "
 MaterialExpressionTextureSample="\"Object\" "
 MaterialExpressionTextureBase="\"Object\" "
-MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[1].Object.ParameterValue\" "
+MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
 Texture2DArray="\"Object\" \"Object.Source2D.SourceTextures\" "
@@ -700,7 +700,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/table
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Carpet
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/FenianShotgun
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cloth
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cloth
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Carpet
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2021,6 +2021,7 @@ MaterialExpressionDivide.MaterialExpressionDivide=True
 MaterialExpressionDivide.MaterialExpression=False
 MaterialExpressionFunctionInput.MaterialExpressionFunctionInput=True
 MaterialExpressionFunctionInput.MaterialExpression=True
+Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=296.000
@@ -3645,26 +3646,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low
-MRUItem2=/Game/Megascans/Surfaces/Wooden_Planks_wckqdbvs/MI_Wooden_Planks_wckqdbvs_2K_Inst
-MRUItem3=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem4=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low
-MRUItem5=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9_I
-MRUItem6=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9
-MRUItem7=/Game/Group_Assets/Charlotte/Assets/Door/SSP_modularAssetsLow_Texture_Set_03_BaseColor
-MRUItem8=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_2
-MRUItem9=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_2_I
-MRUItem10=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_1
-MRUItem11=/Game/Group_Assets/Tashan/gothicdoor/MM_Texture_door_2
-MRUItem12=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_09_OcclusionRoughnessMetallic
-MRUItem13=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_09_Normal
-MRUItem14=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_09_BaseColor
-MRUItem15=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_03_OcclusionRoughnessMetallic
-MRUItem16=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_03_Normal
-MRUItem17=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_03_BaseColor
-MRUItem18=/Game/Group_Assets/Tashan/gothicdoor/MM_Texture_door
-MRUItem19=/Game/Group_Assets/Tashan/floorpiece/MM_FloorPiece_Inst
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Cloth/MI_SofaCloths
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Carpet/MI_Carpet
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_BaseColor
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
+MRUItem5=/Game/Living_Room
+MRUItem6=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low
+MRUItem7=/Game/Megascans/Surfaces/Wooden_Planks_wckqdbvs/MI_Wooden_Planks_wckqdbvs_2K_Inst
+MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem9=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low
+MRUItem10=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9_I
+MRUItem11=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9
+MRUItem12=/Game/Group_Assets/Charlotte/Assets/Door/SSP_modularAssetsLow_Texture_Set_03_BaseColor
+MRUItem13=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_2
+MRUItem14=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_2_I
+MRUItem15=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_1
+MRUItem16=/Game/Group_Assets/Tashan/gothicdoor/MM_Texture_door_2
+MRUItem17=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_09_OcclusionRoughnessMetallic
+MRUItem18=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_09_Normal
+MRUItem19=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_09_BaseColor
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -4025,6 +4026,7 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Cloth/SM_ClothSmallCouch.SM_ClothSmallCouch=1
 /Game/Megascans/Surfaces/Wooden_Planks_wckqdbvs/MI_Wooden_Planks_wckqdbvs_2K_Inst.MI_Wooden_Planks_wckqdbvs_2K_Inst=1
 /Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low.G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low=1
+/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic.SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic=1
 
 [MaterialEditor]
 PrimType=3
@@ -4188,7 +4190,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
