--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -141,7 +141,7 @@ Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.Stati
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 Object="\"Object\" \"Object.Texture.SourceColorSettings\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 None=======
@@ -182,7 +182,7 @@ MaterialInterface="\"Object\" "
 Texture2D="\"Object\" \"Object.Texture.SourceColorSettings\" "
 Texture="\"Object\" \"Object.Texture.SourceColorSettings\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 MaterialExpressionConstant="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
@@ -700,7 +700,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/table
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Carpet
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/FenianShotgun
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cloth
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Carpet
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -771,6 +771,7 @@ Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
 Texture2D.Interchange=False
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
@@ -3495,6 +3496,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low.GrandPiano_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Cloth/SM_ClothSmallCouch.SM_ClothSmallCouch;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Cloth/SM_ClothLargeCouch.SM_ClothLargeCouch;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_01_low.G_ModularAssets_Door_Window_01_SM_Window_01_low;
@@ -3514,21 +3516,6 @@ RecentlyPlaced=/Game/Group_Assets/Modular/Stairs/Stairs_01_Stairs_Small_01.Stair
 RecentlyPlaced=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/room_v5_Ivy_Instance_1_006.room_v5_Ivy_Instance_1_006;
 RecentlyPlaced=/Game/Group_Materials/Brick/Brick_Inst.Brick_Inst;
 RecentlyPlaced=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K_Rotated_90_Inst_2.MI_Dirty_Wooden_Planks_slxoejhp_4K_Rotated_90_Inst_2;
-RecentlyPlaced=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K_Rotated_90_Inst.MI_Dirty_Wooden_Planks_slxoejhp_4K_Rotated_90_Inst;
-RecentlyPlaced=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K_Rotated_90_Inst2.MI_Weathered_Wooden_Planks_ulxqcedaw_2K_Rotated_90_Inst2;
-RecentlyPlaced=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K_Rotated_90.MI_Weathered_Wooden_Planks_ulxqcedaw_2K_Rotated_90;
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet.SM_Carpet;
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_large.Pillow_large;
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/Pillow_small.Pillow_small;
-RecentlyPlaced=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K_Rotated_90_Inst1.MI_Weathered_Wooden_Planks_ulxqcedaw_2K_Rotated_90_Inst1;
-RecentlyPlaced=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K_Rotated_90_Inst.MI_Weathered_Wooden_Planks_ulxqcedaw_2K_Rotated_90_Inst;
-RecentlyPlaced=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_Worn_Wall_Plaster_tmglejmcw_2K_Inst1.MI_Worn_Wall_Plaster_tmglejmcw_2K_Inst1;
-RecentlyPlaced=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_Worn_Wall_Plaster_tmglejmcw_2K_Inst.MI_Worn_Wall_Plaster_tmglejmcw_2K_Inst;
-RecentlyPlaced=/Game/Megascans/Surfaces/Damaged_Wall_Plaster_vcvoeac/MI_Damaged_Wall_Plaster_vcvoeac_2K_Inst.MI_Damaged_Wall_Plaster_vcvoeac_2K_Inst;
-RecentlyPlaced=/Game/Megascans/Surfaces/Damaged_Wall_Plaster_vcvoeac/MI_Damaged_Wall_Plaster_vcvoeac_2K.MI_Damaged_Wall_Plaster_vcvoeac_2K;
-RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low.G_ModularAssets_Door_Window_01_SM_Door_02_low;/Engine/Transient.EditorStaticMeshFactory_0
-RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_04_low.G_ModularAssets_Door_Window_01_SM_Door_04_low;
-RecentlyPlaced=/Game/Assets/Tashan/Stairs/modular/staircasetopM.staircasetopM;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3558,7 +3545,7 @@ bBuildNanite=False
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
 bAutoGenerateCollision=True
-bCombineMeshes=False
+bCombineMeshes=True
 DistanceFieldResolutionScale=1.000000
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
@@ -3646,26 +3633,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Cloth/MI_SofaCloths
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Carpet/MI_Carpet
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic
-MRUItem3=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_BaseColor
-MRUItem4=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
-MRUItem5=/Game/Living_Room
-MRUItem6=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low
-MRUItem7=/Game/Megascans/Surfaces/Wooden_Planks_wckqdbvs/MI_Wooden_Planks_wckqdbvs_2K_Inst
-MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem9=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low
-MRUItem10=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9_I
-MRUItem11=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9
-MRUItem12=/Game/Group_Assets/Charlotte/Assets/Door/SSP_modularAssetsLow_Texture_Set_03_BaseColor
-MRUItem13=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_2
-MRUItem14=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_2_I
-MRUItem15=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_1
-MRUItem16=/Game/Group_Assets/Tashan/gothicdoor/MM_Texture_door_2
-MRUItem17=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_09_OcclusionRoughnessMetallic
-MRUItem18=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_09_Normal
-MRUItem19=/Game/Group_Assets/Tashan/gothicdoor/SSP_modularAssetsLow_Texture_Set_09_BaseColor
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Piano/MI_Piano
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem4=/Game/Group_Assets/Aziz/Assets/Cloth/MI_SofaCloths
+MRUItem5=/Game/Group_Assets/Aziz/Assets/Carpet/MI_Carpet
+MRUItem6=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic
+MRUItem7=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_BaseColor
+MRUItem8=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
+MRUItem9=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low
+MRUItem10=/Game/Megascans/Surfaces/Wooden_Planks_wckqdbvs/MI_Wooden_Planks_wckqdbvs_2K_Inst
+MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem12=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low
+MRUItem13=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9_I
+MRUItem14=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9
+MRUItem15=/Game/Group_Assets/Charlotte/Assets/Door/SSP_modularAssetsLow_Texture_Set_03_BaseColor
+MRUItem16=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_2
+MRUItem17=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_2_I
+MRUItem18=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_1
+MRUItem19=/Game/Group_Assets/Tashan/gothicdoor/MM_Texture_door_2
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -4027,6 +4014,9 @@ None=======
 /Game/Megascans/Surfaces/Wooden_Planks_wckqdbvs/MI_Wooden_Planks_wckqdbvs_2K_Inst.MI_Wooden_Planks_wckqdbvs_2K_Inst=1
 /Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low.G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low=1
 /Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic.SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low_DefaultMaterial_OcclusionRoughnessMetallic.GrandPiano_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/Piano/MI_Piano.MI_Piano=1
+/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low.GrandPiano_low=1
 
 [MaterialEditor]
 PrimType=3
@@ -4190,7 +4180,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
