--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -482,7 +482,7 @@ MaterialExpressionFunctionInput="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -587,6 +587,7 @@ CameraSpeed=2
 CameraSpeed=2
 CurrentRotGridSize=0
 CurrentRotGridSize=1
+RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Living_Room
@@ -700,7 +701,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/table
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Carpet
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/FenianShotgun
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cloth
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Amy/Asset/gramophone
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2112,7 +2113,7 @@ WindowSize=X=1376.000 Y=812.000
 WindowSize=X=1379.333 Y=815.333
 WindowSize=X=1378.000 Y=814.000
 WindowSize=X=1386.000 Y=812.000
-WindowSize=X=1388.000 Y=813.333
+WindowSize=X=1388.000 Y=814.000
 StaticMesh.LevelOfDetail=True
 Door_Group_SM_Door_04_low_Blueprint_C.Networking=True
 StaticMesh.Thumbnail=True
@@ -2154,11 +2155,11 @@ UNR=../../../../../../Users/xiiao/Desktop/Master/Module5/github/MorriganHall/Mor
 UNR=D:/UNIGITHUB/MorriganHall/MorriganHall/Content
 UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHall/Content
 UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHall/Content
-UNR=D:/GroupMorriganHall/MorriganHall/MorriganHall/Content
+UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHall/Content
 BRUSH=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBX=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBXAnim=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
-GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/Sofas/Cloth/SM_ClothLargeCouch.fbx
+GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/GrandPiano/GrandPiano_low_DefaultMaterial_BaseColor.png
 GenericExport=../../../../../../Users/igfxd/OneDrive/Documents/FMP Submission/Assets/door/G_ModularAssets_Door_Window_01_SM_Window_Embellishment_04_low.FBX
 GenericOpen=C:/Users/igfxd/Downloads
 GenericSave=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
@@ -3206,7 +3207,6 @@ None=======
 None=======
 None=======
 RecentsFiles=E:/Program Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
@@ -3214,7 +3214,6 @@ RecentsFiles=E:/Program Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/Cont
 RecentsFiles=E:/Program Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=E:/Program Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
@@ -3496,6 +3495,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Amy/Asset/gramophone/CG_Gramophone_combine_low_UE.CG_Gramophone_combine_low_UE;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low.GrandPiano_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Cloth/SM_ClothSmallCouch.SM_ClothSmallCouch;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Cloth/SM_ClothLargeCouch.SM_ClothLargeCouch;
@@ -3515,7 +3515,6 @@ RecentlyPlaced=/Game/Group_Assets/Modular/Stairs/Stairs_01_Stairs_Small_02.Stair
 RecentlyPlaced=/Game/Group_Assets/Modular/Stairs/Stairs_01_Stairs_Small_01.Stairs_01_Stairs_Small_01;
 RecentlyPlaced=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/room_v5_Ivy_Instance_1_006.room_v5_Ivy_Instance_1_006;
 RecentlyPlaced=/Game/Group_Materials/Brick/Brick_Inst.Brick_Inst;
-RecentlyPlaced=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K_Rotated_90_Inst_2.MI_Dirty_Wooden_Planks_slxoejhp_4K_Rotated_90_Inst_2;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
