--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -344,7 +344,7 @@ WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Light
 WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" "
 Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" "
 Info=
-Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" "
+Info="\"Object\" "
 DirectionalLight="\"Object\" \"Object.Light.DirectionalLightComponent.Object.LightShafts.BloomTint\" "
 Light="\"Object\" \"Object.Light.DirectionalLightComponent.Object.LightShafts.BloomTint\" "
 Light="\"Object\" \"Object.Light.DirectionalLightComponent.Object.LightShafts.BloomTint\" "
@@ -484,7 +484,7 @@ InterchangePipelineBase="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -589,6 +589,7 @@ CameraSpeed=2
 CameraSpeed=2
 CurrentRotGridSize=0
 CurrentRotGridSize=0
+RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Assets/Amy/firstfloor
@@ -622,7 +623,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/chair
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Modular/MainStructureModularAssets
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/mirror
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/violincase
 None=======
 None=======
 None=======
@@ -702,7 +703,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/table
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Carpet
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/FenianShotgun
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cloth
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/stool
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/violincase
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3521,26 +3522,26 @@ None=======
 None=======
 None=======
 None=======
-RecentlyPlaced=/Game/Assets/Amy/Asset/stool/stool.stool;
-RecentlyPlaced=/Game/Assets/Amy/Asset/stool/vevhfe3bw_LOD4.vevhfe3bw_LOD4;
-RecentlyPlaced=/Game/Assets/Amy/Asset/chair/chair.chair;
-RecentlyPlaced=/Game/Assets/Amy/Asset/chair/ChairVintage.ChairVintage;
-RecentlyPlaced=/Game/Group_Assets/Amy/Asset/bookshelf/Old_Dusty_Bookshelf.Old_Dusty_Bookshelf;
-RecentlyPlaced=/Game/Group_Assets/Amy/Asset/roundtable_megascan/uc1kebzfa_LOD4.uc1kebzfa_LOD4;
-RecentlyPlaced=/Game/Assets/Amy/Asset/music_Stand/music_stand.music_stand;
-RecentlyPlaced=/Game/Assets/Amy/Asset/music_Stand/ukmsfieaw_LOD4.ukmsfieaw_LOD4;
-RecentlyPlaced=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2.rockinghorse_UV2;
-RecentlyPlaced=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse.rockinghorse;
-RecentlyPlaced=/Game/Assets/Amy/Asset/rocking_horse/rocking_horse_lowpoly.rocking_horse_lowpoly;
-RecentlyPlaced=/Game/Assets/Amy/Asset/wardrobe_FBX.wardrobe_FBX;
-RecentlyPlaced=/Engine/Transient.FileMediaSource_1;
-RecentlyPlaced=/Game/Assets/Amy/Asset/bed/bed_low.bed_low;
-RecentlyPlaced=/Game/Group_Assets/Tashan/Wood/MM_wood.MM_wood;
-RecentlyPlaced=/Game/Group_Assets/Modular/Stairs/Stairs_01_Stairs_Tree_01.Stairs_01_Stairs_Tree_01;
-RecentlyPlaced=/Game/Group_Assets/Modular/Stairs/Stairs_01_Stairs_Railing_01.Stairs_01_Stairs_Railing_01;
-RecentlyPlaced=/Game/Group_Assets/Modular/Stairs/Stairs_01_Stairs_Landing_Small_01.Stairs_01_Stairs_Landing_Small_01;
-RecentlyPlaced=/Game/Group_Assets/Modular/Stairs/Stairs_01_Stairs_Landing_Large_01.Stairs_01_Stairs_Landing_Large_01;
-RecentlyPlaced=/Game/Group_Assets/Modular/Stairs/Stairs_01_Stairs_Small_02.Stairs_01_Stairs_Small_02;
+RecentlyPlaced=/Game/Assets/Amy/Asset/violincase/NewMaterial.NewMaterial;
+RecentlyPlaced=/Game/Assets/Amy/Asset/violincase/vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_00_LOD2.vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_00_LOD2;
+RecentlyPlaced=/Game/Assets/Amy/Asset/violincase/vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_01_LOD2.vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_01_LOD2;
+RecentlyPlaced=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper.wallpaper;
+RecentlyPlaced=/Game/Assets/Tashan/wallpaper/wallpapers2_wp_01_001.wallpapers2_wp_01_001;
+RecentlyPlaced=/Game/Assets/Tashan/wallpaper/wallpapers3.wallpapers3;
+RecentlyPlaced=/Game/Megascans/Surfaces/Damaged_Wall_Plaster_vcvoeac/MI_Damaged_Wall_Plaster_vcvoeac_2K.MI_Damaged_Wall_Plaster_vcvoeac_2K;
+RecentlyPlaced=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw/MI_Cracked_Wall_Plaster_ulgkfg3lw_2K.MI_Cracked_Wall_Plaster_ulgkfg3lw_2K;
+RecentlyPlaced=/Game/Megascans/3D_Plants/Bushy_Starwort_tfflfg3r/MI_Bushy_Starwort_tfflfg3r_4K.MI_Bushy_Starwort_tfflfg3r_4K;
+RecentlyPlaced=/Game/Megascans/3D_Plants/Bushy_Starwort_tfflfg3r/S_Bushy_Starwort_tfflfg3r_Var1_lod0.S_Bushy_Starwort_tfflfg3r_Var1_lod0;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Wooden_Crate_vi5hdewga/S_Worn_Wooden_Crate_vi5hdewga_lod3_Var1.S_Worn_Wooden_Crate_vi5hdewga_lod3_Var1;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Wooden_Crate_vi5hdewga/S_Worn_Wooden_Crate_vi5hdewga_lod3_Var2.S_Worn_Wooden_Crate_vi5hdewga_lod3_Var2;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Chest_ukqiebvbw/S_Wooden_Chest_ukqiebvbw_lod3.S_Wooden_Chest_ukqiebvbw_lod3;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Damaged_Book_vf1fddhiw/S_Old_Damaged_Book_vf1fddhiw_lod3_Var1.S_Old_Damaged_Book_vf1fddhiw_lod3_Var1;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Floral_Hardcover_Book_vf5kfemjw/S_Floral_Hardcover_Book_vf5kfemjw_lod3_Var1.S_Floral_Hardcover_Book_vf5kfemjw_lod3_Var1;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Fiberboard_Box_ub2keawiw/S_Fiberboard_Box_ub2keawiw_lod3.S_Fiberboard_Box_ub2keawiw_lod3;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Dirty_Wooden_Table_tl1xfcbfa/S_Dirty_Wooden_Table_tl1xfcbfa_lod3.S_Dirty_Wooden_Table_tl1xfcbfa_lod3;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Blue_Book_vf0magphw/S_Old_Blue_Book_vf0magphw_lod3_Var1.S_Old_Blue_Book_vf0magphw_lod3_Var1;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Broken_Statuette_ugtkfevhw/S_Broken_Statuette_ugtkfevhw_lod3_Var1.S_Broken_Statuette_ugtkfevhw_lod3_Var1;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Broken_Statuette_ugthchqva/S_Broken_Statuette_ugthchqva_lod3_Var1.S_Broken_Statuette_ugthchqva_lod3_Var1;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3658,26 +3659,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Asset/chair/chair
+MRUItem0=/Game/Assets/Amy/Asset/violincase/NewMaterial
 MRUItem1=/Game/Assets/Amy/firstfloor
-MRUItem2=/Game/Living_Room
-MRUItem3=/Game/stairwellblock3
-MRUItem4=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K
-MRUItem5=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_char
-MRUItem6=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low
-MRUItem7=/Game/Group_Assets/Aziz/Assets/Piano/MI_Piano
-MRUItem8=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem9=/Game/Group_Assets/Aziz/Assets/Cloth/MI_SofaCloths
-MRUItem10=/Game/Group_Assets/Aziz/Assets/Carpet/MI_Carpet
-MRUItem11=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic
-MRUItem12=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_BaseColor
-MRUItem13=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
-MRUItem14=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low
-MRUItem15=/Game/Megascans/Surfaces/Wooden_Planks_wckqdbvs/MI_Wooden_Planks_wckqdbvs_2K_Inst
-MRUItem16=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem17=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low
-MRUItem18=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9_I
-MRUItem19=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9
+MRUItem2=/Game/Assets/Amy/Asset/chair/chair
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/stairwellblock3
+MRUItem5=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K
+MRUItem6=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_char
+MRUItem7=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low
+MRUItem8=/Game/Group_Assets/Aziz/Assets/Piano/MI_Piano
+MRUItem9=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem10=/Game/Group_Assets/Aziz/Assets/Cloth/MI_SofaCloths
+MRUItem11=/Game/Group_Assets/Aziz/Assets/Carpet/MI_Carpet
+MRUItem12=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic
+MRUItem13=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_BaseColor
+MRUItem14=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
+MRUItem15=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low
+MRUItem16=/Game/Megascans/Surfaces/Wooden_Planks_wckqdbvs/MI_Wooden_Planks_wckqdbvs_2K_Inst
+MRUItem17=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem18=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low
+MRUItem19=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9_I
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
