--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -589,7 +589,6 @@ CameraSpeed=2
 CameraSpeed=2
 CurrentRotGridSize=0
 CurrentRotGridSize=0
-RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Assets/Amy/firstfloor
@@ -703,7 +702,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/table
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Carpet
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/FenianShotgun
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cloth
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/violincase
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3248,6 +3247,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.Animation,MaterialEditorInstanceConstant.ParameterGroups.CloudColors,MaterialEditorInstanceConstant.ParameterGroups.Global,MaterialEditorInstanceConstant.ParameterGroups.Sky,MaterialEditorInstanceConstant.ParameterGroups.Sun,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,
@@ -3522,6 +3522,8 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Assets/Amy/Asset/books/books.books;
+RecentlyPlaced=/Game/Assets/Amy/Asset/books/MedievalBookStack_FBX.MedievalBookStack_FBX;
 RecentlyPlaced=/Game/Assets/Amy/Asset/violincase/NewMaterial.NewMaterial;
 RecentlyPlaced=/Game/Assets/Amy/Asset/violincase/vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_00_LOD2.vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_00_LOD2;
 RecentlyPlaced=/Game/Assets/Amy/Asset/violincase/vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_01_LOD2.vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_01_LOD2;
@@ -3540,8 +3542,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Floral_Hardcover_Book_vf5kfemjw/S_Flora
 RecentlyPlaced=/Game/Megascans/3D_Assets/Fiberboard_Box_ub2keawiw/S_Fiberboard_Box_ub2keawiw_lod3.S_Fiberboard_Box_ub2keawiw_lod3;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Dirty_Wooden_Table_tl1xfcbfa/S_Dirty_Wooden_Table_tl1xfcbfa_lod3.S_Dirty_Wooden_Table_tl1xfcbfa_lod3;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Blue_Book_vf0magphw/S_Old_Blue_Book_vf0magphw_lod3_Var1.S_Old_Blue_Book_vf0magphw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Broken_Statuette_ugtkfevhw/S_Broken_Statuette_ugtkfevhw_lod3_Var1.S_Broken_Statuette_ugtkfevhw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Broken_Statuette_ugthchqva/S_Broken_Statuette_ugthchqva_lod3_Var1.S_Broken_Statuette_ugthchqva_lod3_Var1;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3659,26 +3659,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Asset/violincase/NewMaterial
-MRUItem1=/Game/Assets/Amy/firstfloor
-MRUItem2=/Game/Assets/Amy/Asset/chair/chair
-MRUItem3=/Game/Living_Room
-MRUItem4=/Game/stairwellblock3
-MRUItem5=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K
-MRUItem6=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_char
-MRUItem7=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low
-MRUItem8=/Game/Group_Assets/Aziz/Assets/Piano/MI_Piano
-MRUItem9=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem10=/Game/Group_Assets/Aziz/Assets/Cloth/MI_SofaCloths
-MRUItem11=/Game/Group_Assets/Aziz/Assets/Carpet/MI_Carpet
-MRUItem12=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic
-MRUItem13=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_BaseColor
-MRUItem14=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
-MRUItem15=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low
-MRUItem16=/Game/Megascans/Surfaces/Wooden_Planks_wckqdbvs/MI_Wooden_Planks_wckqdbvs_2K_Inst
-MRUItem17=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem18=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low
-MRUItem19=/Game/Group_Assets/Charlotte/Assets/Door/M_DoorWindow_9_I
+MRUItem0=/Game/Assets/Amy/Asset/books/books
+MRUItem1=/Game/Assets/Amy/Asset/violincase/NewMaterial
+MRUItem2=/Game/Assets/Amy/firstfloor
+MRUItem3=/Game/Assets/Amy/Asset/chair/chair
+MRUItem4=/Game/Living_Room
+MRUItem5=/Game/stairwellblock3
+MRUItem6=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K
+MRUItem7=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_char
+MRUItem8=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low
+MRUItem9=/Game/Group_Assets/Aziz/Assets/Piano/MI_Piano
+MRUItem10=/Game/Group_Assets/Aziz/Assets/Piano/GrandPiano_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem11=/Game/Group_Assets/Aziz/Assets/Cloth/MI_SofaCloths
+MRUItem12=/Game/Group_Assets/Aziz/Assets/Carpet/MI_Carpet
+MRUItem13=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_OcclusionRoughnessMetallic
+MRUItem14=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet_FABRIC_1_FRONT_1119_BaseColor
+MRUItem15=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
+MRUItem16=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_Pane_01_low
+MRUItem17=/Game/Megascans/Surfaces/Wooden_Planks_wckqdbvs/MI_Wooden_Planks_wckqdbvs_2K_Inst
+MRUItem18=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem19=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
