--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -702,7 +702,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/table
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Carpet
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/FenianShotgun
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cloth
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/clothesstand
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3522,26 +3522,26 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Torus_2.Coat_Stand_Torus_2;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Torus_1.Coat_Stand_Torus_1;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Torus.Coat_Stand_Torus;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Top_Cap.Coat_Stand_Top_Cap;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Leg_3.Coat_Stand_Leg_3;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Leg_2.Coat_Stand_Leg_2;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Leg_1.Coat_Stand_Leg_1;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Leg.Coat_Stand_Leg;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Cylinder.Coat_Stand_Cylinder;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Bottom_Knob.Coat_Stand_Bottom_Knob;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Boolean_5.Coat_Stand_Boolean_5;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Boolean_4.Coat_Stand_Boolean_4;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Boolean_3.Coat_Stand_Boolean_3;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Boolean_2.Coat_Stand_Boolean_2;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Boolean_1.Coat_Stand_Boolean_1;
+RecentlyPlaced=/Game/Assets/Amy/Asset/clothesstand/Coat_Stand_Boolean.Coat_Stand_Boolean;
 RecentlyPlaced=/Game/Assets/Amy/Asset/books/books.books;
 RecentlyPlaced=/Game/Assets/Amy/Asset/books/MedievalBookStack_FBX.MedievalBookStack_FBX;
 RecentlyPlaced=/Game/Assets/Amy/Asset/violincase/NewMaterial.NewMaterial;
 RecentlyPlaced=/Game/Assets/Amy/Asset/violincase/vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_00_LOD2.vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_00_LOD2;
-RecentlyPlaced=/Game/Assets/Amy/Asset/violincase/vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_01_LOD2.vi5gch1ga_LOD2_Aset_props__S_vi5gch1ga_01_LOD2;
-RecentlyPlaced=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper.wallpaper;
-RecentlyPlaced=/Game/Assets/Tashan/wallpaper/wallpapers2_wp_01_001.wallpapers2_wp_01_001;
-RecentlyPlaced=/Game/Assets/Tashan/wallpaper/wallpapers3.wallpapers3;
-RecentlyPlaced=/Game/Megascans/Surfaces/Damaged_Wall_Plaster_vcvoeac/MI_Damaged_Wall_Plaster_vcvoeac_2K.MI_Damaged_Wall_Plaster_vcvoeac_2K;
-RecentlyPlaced=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw/MI_Cracked_Wall_Plaster_ulgkfg3lw_2K.MI_Cracked_Wall_Plaster_ulgkfg3lw_2K;
-RecentlyPlaced=/Game/Megascans/3D_Plants/Bushy_Starwort_tfflfg3r/MI_Bushy_Starwort_tfflfg3r_4K.MI_Bushy_Starwort_tfflfg3r_4K;
-RecentlyPlaced=/Game/Megascans/3D_Plants/Bushy_Starwort_tfflfg3r/S_Bushy_Starwort_tfflfg3r_Var1_lod0.S_Bushy_Starwort_tfflfg3r_Var1_lod0;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Wooden_Crate_vi5hdewga/S_Worn_Wooden_Crate_vi5hdewga_lod3_Var1.S_Worn_Wooden_Crate_vi5hdewga_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Wooden_Crate_vi5hdewga/S_Worn_Wooden_Crate_vi5hdewga_lod3_Var2.S_Worn_Wooden_Crate_vi5hdewga_lod3_Var2;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Chest_ukqiebvbw/S_Wooden_Chest_ukqiebvbw_lod3.S_Wooden_Chest_ukqiebvbw_lod3;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Damaged_Book_vf1fddhiw/S_Old_Damaged_Book_vf1fddhiw_lod3_Var1.S_Old_Damaged_Book_vf1fddhiw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Floral_Hardcover_Book_vf5kfemjw/S_Floral_Hardcover_Book_vf5kfemjw_lod3_Var1.S_Floral_Hardcover_Book_vf5kfemjw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Fiberboard_Box_ub2keawiw/S_Fiberboard_Box_ub2keawiw_lod3.S_Fiberboard_Box_ub2keawiw_lod3;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Dirty_Wooden_Table_tl1xfcbfa/S_Dirty_Wooden_Table_tl1xfcbfa_lod3.S_Dirty_Wooden_Table_tl1xfcbfa_lod3;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Blue_Book_vf0magphw/S_Old_Blue_Book_vf0magphw_lod3_Var1.S_Old_Blue_Book_vf0magphw_lod3_Var1;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
