--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -111,7 +111,7 @@ LastLevel=/Game/stairwellblock3
 LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
 LastLevel=/Game/Living_Room
-LastLevel=/Game/Assets/Amy/firstfloor
+LastLevel=/Game/Attic
 None=======
 None=======
 None=======
@@ -592,10 +592,10 @@ CurrentRotGridSize=0
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Assets/Amy/firstfloor
-MRUItem1=/Game/Living_Room
-MRUItem2=/Game/stairwellblock3
-MRUItem3=/Game/Attic
+MRUItem0=/Game/Attic
+MRUItem1=/Game/Assets/Amy/firstfloor
+MRUItem2=/Game/Living_Room
+MRUItem3=/Game/stairwellblock3
 MRUItem4=/Game/abandonedroom_V2
 MRUItem5=/Game/stairwellblock2
 MRUItem6=/Game/Assets/Amy/test
