SHES A SIX SHOOTER

--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/Engine.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/Engine.ini
@@ -74,17 +74,15 @@ FlipNormalMapGreenChannel=False
 
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
-<<<<<<< Updated upstream
 ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
-=======
 ToggleKeysHotkey=False
+FilterKeysHotkey=True
 FilterKeysHotkey=False
+StickyKeysConfirmation=True
 StickyKeysConfirmation=False
+ToggleKeysConfirmation=True
 ToggleKeysConfirmation=False
+FilterKeysConfirmation=True
 FilterKeysConfirmation=False
->>>>>>> Stashed changes
+None=======
 
