--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,7 +127,6 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CameraSpeed=2
-GridEnabled=False
 SnapScaleEnabled=False
 FlightCameraControlExperimentalNavigation=False
 MinimumOrthographicZoom=250.000000
@@ -204,7 +203,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cabinet
 ContentBrowserDrawer.SelectedPaths=/Game
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1365,7 +1364,7 @@ GeneralProjectSettings=True
 EditorStyleSettings=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1381,9 +1380,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
-MRUItem1=/Game/Assets/Tashan/stairs/Material_005
-MRUItem2=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
+MRUItem2=/Game/Assets/Tashan/stairs/Material_005
 MRUItem3=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/NewMaterial
 MRUItem4=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
 MRUItem5=/Game/Group_Materials/Glass/Glass_Inst_Inst
@@ -1412,6 +1411,10 @@ FbxImportUI.Miscellaneous=False
 FbxImportUI.Mesh=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Group_Assets/Amy/Asset/chloe_mirror/Mirror_Combine_UE.Mirror_Combine_UE;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/MM_RimThingies.MM_RimThingies;
 RecentlyPlaced=/Game/Megascans/Surfaces/Old_Wooden_Panel_tczlfasn/MI_Old_Wooden_Panel_tczlfasn_2K_Inst.MI_Old_Wooden_Panel_tczlfasn_2K_Inst;
 RecentlyPlaced=/Game/Megascans/Surfaces/Plaster_Wall_uffmfgilw/MI_Plaster_Wall_uffmfgilw_2K.MI_Plaster_Wall_uffmfgilw_2K;
@@ -1428,10 +1431,6 @@ RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Wood_Floor_
 RecentlyPlaced=/Game/Assets/Tashan/stairs/Stairsidestraight.Stairsidestraight;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/skirting_sm_smallsidestairwall.skirting_sm_smallsidestairwall;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/StairSideAssets_sm_smallsidestairwall_001.StairSideAssets_sm_smallsidestairwall_001;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Rusty_Fire_Poker_wlkncbw/S_Rusty_Fire_Poker_wlkncbw_lod5.S_Rusty_Fire_Poker_wlkncbw_lod5;
-RecentlyPlaced=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/NewMaterial.NewMaterial;
-RecentlyPlaced=/Game/Group_Materials/Glass/Glass_Inst_Inst.Glass_Inst_Inst;
-RecentlyPlaced=/Game/Group_Assets/Tashan/mirror/glass_shatter_group.glass_shatter_group;
 None=======
 None=======
 None=======
