--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,10 +158,10 @@ GridEnabled=False
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/stairwellblock3
-MRUItem1=/Game/Living_Room
-MRUItem2=/Game/abandonedroom_V2
-MRUItem3=/Game/Attic
+MRUItem0=/Game/Attic
+MRUItem1=/Game/stairwellblock3
+MRUItem2=/Game/Living_Room
+MRUItem3=/Game/abandonedroom_V2
 MRUItem4=/Game/Assets/Amy/firstfloor
 MRUItem5=/Game/abandonedroom_Migration
 
@@ -207,7 +207,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cabinet
 ContentBrowserDrawer.SelectedPaths=/Game
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -243,7 +243,7 @@ LastLevel=/Game/Attic
 LastLevel=/Game/abandonedroom_V2
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 LastLevel=/Game/Living_Room
-LastLevel=/Game/stairwellblock3
+LastLevel=/Game/Attic
 None=======
 None=======
 None=======
@@ -1703,7 +1703,7 @@ ScreenPosition=X=88.000 Y=0.000
 WindowSize=X=1289.600 Y=729.600
 WindowSize=X=1286.400 Y=726.400
 WindowSize=X=1285.333 Y=725.333
-WindowSize=X=1306.400 Y=746.400
+WindowSize=X=1308.667 Y=748.667
 None=======
 None=======
 None=======
@@ -1723,7 +1723,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content
+UNR=D:/GroupMorriganHall/MorriganHall/MorriganHall 5.2/Content
 BRUSH=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBX=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBXAnim=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
@@ -1733,7 +1733,7 @@ GenericOpen=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Mor
 GenericSave=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 MeshImportExport=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 WorldRoot=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
-Level=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content
+Level=D:/GroupMorriganHall/MorriganHall/MorriganHall 5.2/Content
 Project=C:/Program Files/Epic Games/UE_5.2/
 
 [ModuleFileTracking]
@@ -2785,9 +2785,9 @@ MovieSceneCapture.LastCompileMethod=External
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Program Files/Unreal Engine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
